            Fixed: OSDMemoInitialize() omitted lines and created additional blank lines
2018-12-01: Fixed: OSDMemoInitialize() produced a blank line at the end by always adding \n to Text, even if already properly terminated by \n
2018-12-02: Fixed: OSDMenu's background height was 1 px too small (10 * 35 px + 9 * 2 px = 368 px)
            Fixed: OSDMenu drawing didn't always start at y = 96 (which is the top of the background)
            Fixed: OSDMenu's first list item's height was 1 px too small (130 - 96 = 34 but should be 35 like all other list items)
            Fixed: OSDMenu's scrollbar bottom position was 3 px too high (368 - 2 * 12 - 20 = 324)
            Fixed: OSDMenu's selected list item lacked the 2 px separation line at its bottom
            Fixed: OSDMenu's scrollbar was 1 px too far to the right (659 is end of the background, 660 the necessary gap)
2018-12-06: Fixed: OSDMenuButtonAdd() didn't utilize struct member FontButtons
            Fixed: Limit button drawing to the end of the separation line (minus margin)
            Fixed: OSDMenu's left title was 3 px too far to the right and 1 px too low (right title was 3 px too low)
            Fixed: OSDMenu's progress bar was 1 px too close to the left ((720 - 252) / 2 = 234)
            Fixed: OSDMenu's color picker was 2 px too high up, buttons and color box were 3 px too far from the bottom and color box was 1 px too close to the left
2019-01-17: Fixed: Reset "Dirty" flags after drawing to avoid repetitive redrawing of all OSD content
2019-01-18: Added: FB_DEBUG and FB_DEBUG_FULL to enable debugging which is disabled by default now (FB_NO_DEBUG and FB_LIBRARY_COMPILATION have been removed)
2019-02-11: Fixed: Limit the number of InfoBox lines and MessageBox lines to 7 (which is the maximum number of lines that can be displayed)